# giesscheduler

./: README.md  pyproject.toml
giesscheduler/utils/: courses.py  schedules.py
